--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h2 class="atdph">Wikipedia contributors. (2026a, January 5). Whac-A-Mole. Wikipedia. https://en.wikipedia.org/wiki/Whac-A-Mole</h2>
 <h2 class="atdph">W3Schools.com. (n.d.). https://www.w3schools.com/</h2>
 <h2 class="atdph">Pixel Space Wallpapers. (n.d.). WallpaperAccess. https://wallpaperaccess.com/pixel-space</h2>
-<h2 class="atdph" style="color: black;">pokpak. (n.d.). pixel art planeta tierra PNG Pro. Vecteezy. https://es.vecteezy.com/png/13528882-pixel-art-planeta-tierra</h2>
+<h2 class="atdph">pokpak. (n.d.). pixel art planeta tierra PNG Pro. Vecteezy. https://es.vecteezy.com/png/13528882-pixel-art-planeta-tierra</h2>
 <div id="rtrn" onclick="rtrn()">Return</div>
 </div>
 <div id="scrbrd">
@@ -72,5 +72,6 @@
   </div>
 </body>
 </html>
+
 
 
